# crm-v2

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  ACCESS_URLS.md  ARCHITECTURE.md  ASSESSMENT_BOOST.md  DATABASE_SCHEMA.md  DEMO_COMMANDS.md  DEMO_READY.md  DEMO_SCRIPT.md  Dockerfile.backend  FINAL_SETUP.md  FRONTEND_ENHANCEMENTS.md  GROQ_SETUP.md  NEXT_STEPS.md  PRE_DEMO_CHECKLIST.md  PRODUCTION_READY.md  QUICK_IMPLEMENT.sh  QUICK_START.md  README.md  REALTIME_IMPLEMENTATION.md  SETUP_STATUS.md  SYSTEM_COMPLETE.md  WHAT_EVALUATOR_SEES.md  WORKING_SYSTEM_SUMMARY.md  alembic.ini  docker  docker-compose.yml  email-data-advanced.json  fix_contacts.sql  fix_heatmap_data.sql  mypy.ini  populate_heatmap.sql  populate_heatmap_fixed.sql  process_all_emails.py  process_emails.py  process_emails_fast.py  (+7 more)
backend/: crm_local.db  requirements.txt  server.err  test_agent_flow.py  test_agent_service.py  test_agent_service2.py  test_agent_tools.py  test_analytics.py  test_api.py  test_at_risk.py  test_config.py  test_crm.db  test_crm2.db  test_crm3.db  test_css.py  test_db_sentiment.py  test_extract_json.py  test_flags.py  test_frontend.py  test_full_process.py  test_karen_sentiment.py  test_llm_debug.py  test_llm_direct.py  test_llm_raw.py  test_multi_flush.py  test_orm.py  test_pipeline.py  test_prompt_size.py  test_rag.py  test_rag_flow.py  test_rag_usage.py  test_raw_sql.py  test_sentiment.py  test_sentiment_distribution.py  test_simple_flow.py  test_stats.py  test_store_trace.py  test_ws.py  update_contacts.py
docs/: api.md  architecture.md  runbook.md  troubleshooting.md
frontend/: .dockerignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
knowledge_base/: api_docs.md  compliance_faq.md  escalation_matrix.md  pricing_policy.md  refund_policy.md  sla_policy.md
migrations/: env.py
scripts/: create_sample_data.py  fix_contact_data.py  seed_knowledge_base.py  simulate_stream.py  (+1 more)
(+58 files in other folders)
