[metadata]
name = senai-crm
version = 1.0.0
description = SenAI CRM - Agentic CRM Intelligence Platform
author = SenAI Solutions
author_email = intern@senai.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = backend
packages = find:
python_requires = >=3.11

[options.packages.find]
where = backend

[tool:pytest]
testpaths = tests
asyncio_mode = auto

[coverage:run]
source = backend/app
omit =
    */tests/*
    */migrations/*
    */.venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod
